# My-Experiments

./: 05 Chatbot for answering questions.ipynb  1 - Setup.ipynb  LICENSE  README.md  Setup.ipynb  Test.ipynb  pyproject.toml
AI Solutions/: Airline AI chatboat Assistant using tools.ipynb
Data Science Solutions/: 2 - Scrape website .ipynb  Scraper - Selenium and BeautifulSoup.ipynb  Scraper.ipynb
Solutions/: Airline AI chatboat Assistant using tools.ipynb  Extract Contact Info.ipynb  Scraper - Parivesh SEIAA.ipynb  Scraper - Selenium and BeautifulSoup.ipynb  scraper.py
