[project]
name = "experiments"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "gradio>=6.14.0",
    "ipykernel>=7.2.0",
    "litellm>=1.83.0",
    "ollama>=0.6.2",
    "openai>=2.36.0",
    "openai-agents>=0.17.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.0",
]
